--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eScoolab</title>
+    <link rel="icon" href="fav-ico.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
@@ -110,6 +111,34 @@
 
     </div>
     <section class="sec3"></section>
+    <section class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>Quick Links</h3>
+                <a href="index.html"><i class="fas fa-arrow-right"></i> Home </a>
+                <a href="practicals.html"><i class="fas fa-arrow-right"></i> Practicals </a>
+                <a href="glosary.html"><i class="fas fa-arrow-right"></i> Glosary </a>
+                <a href="labtools.html"><i class="fas fa-arrow-right"></i> LabTools </a>
+                <a href="contact_us.html"><i class="fas fa-arrow-right"></i> Contact Us </a>
+            </div>
+            <div class="box">
+                <h3>Quick Links</h3>
+                <a href="tell:03152262699"><i class="fas fa-phone"></i> +92-3152262699 </a>
+                <a href="tell:03042767900"><i class="fas fa-phone"></i> +92-3042767900 </a>
+                <a href="mailto:zeeshanzeegota@gmail.com"><i class="fas fa-envelope"></i> zeeshanzeegota@gmail.com </a>
+                <a href="#"><i class="fas fa-map-marker-alt"></i> karachi, pakistan - 75500 </a>
+            </div>
+            <div class="box">
+                <h3>Quick Links</h3>
+                <a href="https://www.facebook.com/zeeshan.zeegota"><i class="fab fa-facebook-f"></i> facebbok </a>
+                <a href="#"><i class="fab fa-twitter"></i> twitter </a>
+                <a href="https://www.instagram.com/zeeshan.zeegota/"><i class="fab fa-instagram"></i> instagram </a>
+                <a href="https://www.linkedin.com/in/muhammad-zeeshan-023542205/"><i class="fab fa-linkedin"></i> linkedin </a>
+            </div>
+        </div>
+        <hr style="background-color: gray; height: 1px;">
+        <div class="credit"> Create by eScoolab.tk | All Rights Reserved!</div>
+    </section>
 
 </body>
 
