two pages updated
contact us page updated and completed.
labtools page updated and completed.

--- a/iframe_page.html
+++ b/iframe_page.html
@@ -16,9 +16,13 @@
             <div class="banner-text">
                 <h2>Biology</h2>
                 <span class="bot-line-w"></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia fugit aliquam incidunt ipsa autem quae, neque hic quas adipisci.
-                    Consequatur vitae libero sunt maiores quas ipsum laudantium est ea perferendis!</p>
+                <p>Biology is the scientific study of life.
+                It is a natural science with a broad scope but
+                has several unifying themes that tie it together
+                as a single, coherent field. For instance,
+                all organisms are made up of cells that process
+                hereditary information encoded in genes, which can 
+                be transmitted to future generations.</p>
             </div>
         </div>
         <div class="banner2">
@@ -26,9 +30,11 @@
             <div class="banner-text">
                 <h2>Physics</h2>
                 <span class="bot-line"></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia fugit aliquam incidunt ipsa autem quae, neque hic quas adipisci.
-                    Consequatur vitae libero sunt maiores quas ipsum laudantium est ea perferendis!</p>
+                <p>Physics is the natural science that studies matter,
+                its motion and behavior through space and time, and the 
+                related entities of energy and force. Physics is one of 
+                the most fundamental scientific disciplines, and its 
+                main goal is to understand how the universe behaves.</p>
             </div>
         </div>
         <div class="banner3">
@@ -36,9 +42,10 @@
             <div class="banner-text">
                 <h2>Chemistry</h2>
                 <span class="bot-line"></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia fugit aliquam incidunt ipsa autem quae, neque hic quas adipisci.
-                    Consequatur vitae libero sunt maiores quas ipsum laudantium est ea perferendis!</p>
+                <p>Chemistry, the science that deals with the properties, 
+                composition, and structure of substances (defined as elements and compounds), 
+                the transformations they undergo, and the energy that is 
+                released or absorbed during these processes</p>
             </div>
         </div>
 
