--- a/contact_us.html
+++ b/contact_us.html
@@ -95,9 +95,78 @@
                 <li><a class="link" data-color="#0a66c2" href="https://www.linkedin.com/in/muhammad-zeeshan-023542205/" target="_blank">Linkedin</a></li>
             </ul>
         </div>
-        
+        <div class="content-page">
+            <figure class="labtoolsBanner">
+                <img class="home-parallax" src="assets/img/contact.svg" data-speed="3" alt="">
+                <h1 class="home-parallax" data-speed="5">Contact Us</h1>
+            </figure>
+        </div>
 
     </div>
+
+    <!-- Contact-->
+    <section class="contact_section" id="contact">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="heading my-5">Contact Us</h2>
+            </div>
+            <!-- * * * * * * * * * * * * * * *-->
+            <!-- * * SB Forms Contact Form * *-->
+            <!-- * * * * * * * * * * * * * * *-->
+            <!-- This form is pre-integrated with SB Forms.-->
+            <!-- To make this form functional, sign up at-->
+            <!-- https://startbootstrap.com/solution/contact-forms-->
+            <!-- to get an API token!-->
+            <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                <div class="row align-items-stretch mb-5">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <!-- Name input-->
+                            <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
+                            <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                        </div>
+                        <div class="form-group">
+                            <!-- Email address input-->
+                            <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
+                            <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                            <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                        </div>
+                        <div class="form-group mb-md-0">
+                            <!-- Phone number input-->
+                            <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
+                            <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group form-group-textarea mb-md-0">
+                            <!-- Message input-->
+                            <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
+                            <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Submit success message-->
+                <!---->
+                <!-- This is what your users will see when the form-->
+                <!-- has successfully submitted-->
+                <div class="d-none" id="submitSuccessMessage">
+                    <div class="text-center text-white mb-3">
+                        <div class="fw-bolder">Form submission successful!</div>
+                        To activate this form, sign up at
+                        
+                    </div>
+                </div>
+                <!-- Submit error message-->
+                <!---->
+                <!-- This is what your users will see when there is-->
+                <!-- an error submitting the form-->
+                <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                <!-- Submit Button-->
+                <div class="text-center"><button class="btn-contact" id="submitButton" type="submit">Send Message</button></div>
+            </form>
+        </div>
+    </section>
+
     <section class="footer">
         <div class="box-container">
             <div class="box">
@@ -136,6 +205,7 @@
 <script src="assets/js/TweenMax.min.js"></script>
 <script src="assets/js/slick.min.js"></script>
 <script src="assets/js/swiper-bundle.min.js"></script>
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 <script src="assets/js/main.js"></script>
 
 </html>
