glosary page updated

--- a/glosary.html
+++ b/glosary.html
@@ -95,9 +95,23 @@
                 <li><a class="link" data-color="#0a66c2" href="https://www.linkedin.com/in/muhammad-zeeshan-023542205/" target="_blank">Linkedin</a></li>
             </ul>
         </div>
-        
+        <div class="content-page">
+            <figure class="labtoolsBanner">
+                <img class="home-parallax" src="assets/img/glosary.svg" data-speed="4" alt="">
+                <h1 class="home-parallax" data-speed="6">Glosary</h1>
+            </figure>
+        </div>
 
     </div>
+    <section class="glosary_section">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="heading my-5">Coming Soon</h2>
+            </div>
+            
+        </div>
+    </section>
+
     <section class="footer">
         <div class="box-container">
             <div class="box">
