--- a/iframe_page.html
+++ b/iframe_page.html
@@ -57,6 +57,6 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/annyang.min.js"></script>
 <script src="assets/js/TweenMax.min.js"></script>
-<script src="assets/js/slick.min.js"></script>
+<!-- <script src="assets/js/slick.min.js"></script> -->
 <script src="assets/js/main.js"></script>
 </html>
