--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     
 </head>
@@ -19,19 +20,29 @@
         <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header text-center">
-            <h5 class="modal-title" id="exampleModalCenterTitle">Guide line</h5>
+            <h5 class="voiceModalTitle" id="exampleModalCenterTitle">Guide line</h5>
             </div>
             <div class="modal-body">
             <p><label>"Open Menu"</label> to open the menu bar </p>
             <p><label>"Close Menu"</label> to close the menu bar </p>
-            <p><label>"Scroll Down"</label> to scroll the page </p>
+            <p><label>"Scroll Down"</label> to scroll down the page </p>
+            <p><label>"Scroll Up"</label> to scroll up the page </p>
+            <p><label>"Home Page"</label> to get Home page </p>
+            <p><label>"Practical Page"</label> to get Practical page </p>
+            <p><label>"Glosary page"</label> to get Glosary page </p>
+            <p><label>"Lab Equipments page"</label> to get Lab Tools page </p>
+            <p><label>"Contact Us page"</label> to get contact us page </p>
+
 
             <p><label>"Stutdown"</label> to close the voice command function </p>
             <p><label>"Reload"</label> to Reload the page </p>
+            <p><label>"Voice Commands"</label> to open voice commands list </p>
+            <p><label>"Close Voice Commands"</label> to close voice commands list </p>
+
 
             </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <div class="modal-footer justify-content-center">
+            <button type="button" class="btn btn-contact" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
@@ -61,7 +72,7 @@
                     <img src="assets/img/logo.png" alt="">
                 </a>
             </div>
-            <div class="voiceBtn">
+            <div class="voiceBtn" data-toggle="modal" data-target="#exampleModalCenter" data-backdrop="false">
                 <i class="fas fa-microphone-alt"></i>
             </div>
         </nav>
@@ -90,20 +101,37 @@
         </div>
         <section class="content-page">
             <div class="content">
-                <div class="row align-items-center justify-content-center">
+                <div class="row align-items-center">
+                    <div class="banner_heading">
+                        <h1>Education</h1>
+                        <h2> is the key to success</h2>
+                    </div>
                     <figure class="header_banner">
                         <img src="assets/img/laptop-popup.png" alt="">
+                        <iframe class="l1l" src="iframe_practical.html" style="opacity: 0; transition: 0.4s;"></iframe>
+                        <iframe class="l2l" src="iframe_glosary.html" style="opacity: 0; transition: 0.4s;"></iframe>
+                        <iframe class="l3l" src="iframe_labtool.html" style="opacity: 0; transition: 0.4s;"></iframe>
                         <iframe class="laptop_screen" src="iframe_page.html" frameborder="0"></iframe>
                     </figure>
+                    <div class="page_headings">
+                        <ul>
+                            <li class="l1">
+                                <a href="practicals.html">Practicals</a>
+                            </li>
+                            <li class="l2">
+                                <a href="glosary.html">Glossary</a>
+                            </li>
+                            <li class="l3">
+                                <a href="labtools.html">Lab Tools</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="content2">
-            <div ></div>
-        </section>
 
     </div>
-    <section class="sec3"></section>
+    
     <section class="footer">
         <div class="box-container">
             <div class="box">
@@ -139,10 +167,14 @@
 <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/annyang.min.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 <script src="assets/js/TweenMax.min.js"></script>
-<script src="assets/js/slick.min.js"></script>
-<script src="assets/js/swiper-bundle.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.js"></script> -->
+<script src="assets/js/annyang.min.js"></script> 
+<!-- <script src="assets/js/slick.min.js"></script> -->
+<!-- <script src="assets/js/swiper-bundle.min.js"></script> -->
 <script src="assets/js/main.js"></script>          
 
 </html>
