--- a/practicals.html
+++ b/practicals.html
@@ -105,7 +105,17 @@
             </figure>
         </div>
     </div>
-    
+    <section class="practical_section">
+        <div class="container-fluid">
+            <div class="text-center">
+                <h2 class="heading my-5">Practicals</h2>
+            </div>
+            <div class="modal-content" style="width: 100; height: 900px; padding: 5px;">
+                <iframe src="https://eskoollab.tk/htmlpages/practicals.html" style="width: 100%; height: 100%;"></iframe>
+            </div>
+        </div>
+    </section>
+
     <section class="footer">
         <div class="box-container">
             <div class="box">
